C++ プロジェクトにコンバートした

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -2,3 +2,9 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=8112DE5E42BFBC080ACDC2B6B552CD88
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Shipping
+FullRebuild=True
+ForDistribution=True
+
