--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -75,3 +75,6 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+
+[CoreRedirects]
++PropertyRedirects=(OldName="/Script/petitcon21.StageSequenceDataAsset.CharacterDataMap",NewName="/Script/petitcon21.StageSequenceDataAsset.StageSequenceMap")
