--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Main.Main
+GameDefaultMap=/Game/Title.Title
 EditorStartupMap=/Game/Main.Main
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
@@ -78,3 +78,4 @@ ManualIPAddress=
 
 [CoreRedirects]
 +PropertyRedirects=(OldName="/Script/petitcon21.StageSequenceDataAsset.CharacterDataMap",NewName="/Script/petitcon21.StageSequenceDataAsset.StageSequenceMap")
+
