#44 パッケージングの設定を変えた

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,7 +3,8 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Title.Title
 EditorStartupMap=/Game/Main.Main
-GameInstanceClass=/Game/GI_GameInstance.GI_GameInstance_C
+GameInstanceClass=/Game/BP_GameInstance.BP_GameInstance_C
+GlobalDefaultGameMode=/Game/BP_GameMode.BP_GameMode_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
