--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -4,7 +4,8 @@
 ProjectID=8112DE5E42BFBC080ACDC2B6B552CD88
 
 [/Script/UnrealEd.ProjectPackagingSettings]
-BuildConfiguration=PPBC_Shipping
+BuildConfiguration=PPBC_Development
 FullRebuild=True
-ForDistribution=True
+ForDistribution=False
+Build=Always
 
