#52 繰り返しパッケージングするために設定を変えた

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -5,7 +5,7 @@ ProjectID=8112DE5E42BFBC080ACDC2B6B552CD88
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 BuildConfiguration=PPBC_Shipping
-FullRebuild=True
-ForDistribution=False
+FullRebuild=False
+ForDistribution=True
 Build=Always
 
