--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Title.Title
+GameDefaultMap=/Game/Prologue.Prologue
 EditorStartupMap=/Game/Main.Main
 GameInstanceClass=/Game/BP_GameInstance.BP_GameInstance_C
 GlobalDefaultGameMode=/Game/BP_GameMode.BP_GameMode_C
